[Misc] Fix various mechanical SonarQube issues in the commons modules
* java:S6201: replace instanceof + cast with an instanceof pattern (42)
* java:S8924: use a static import for the Mockito methods (15)
* java:S6485: use the HashMap/HashSet/LinkedHashMap/LinkedHashSet.newXxx() factory methods (10)
* java:S6204: use Stream.toList() instead of collect(Collectors.toList()) (10)
* java:S1066: merge collapsible nested if statements (9)
* java:S1611: remove the parentheses around a single lambda parameter (5)
* java:S1161: add a missing @Override annotation (3)
* java:S1125: remove a redundant boolean literal (2)
* java:S1612: replace a lambda with a method reference (2)
* java:S1640: use an EnumMap for an enum-keyed Map (2)
* java:S6208: merge fall-through case labels into comma-separated labels (2)
* java:S1124: reorder the modifiers to comply with the JLS (1)
* java:S1488: immediately return the expression instead of a temporary local (1)
* java:S1604: replace an anonymous inner class with a lambda (1)

Co-authored-by: Vincent Massol <vincent@massol.net>